Update app title

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -3,3 +3,4 @@ API_DOMAIN=api.resonate.coop
 API_HOST=https://api.resonate.coop
 APP_HOST=beta.stream.resonate.coop
 STATIC_HOSTNAME=dash.resonate.coop
+APP_TITLE=Justifay ID
