--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,6 +1,6 @@
 NODE_ENV=development
-API_DOMAIN=api.resonate.coop
-API_HOST=https://api.resonate.coop
-APP_HOST=beta.stream.resonate.coop
-STATIC_HOSTNAME=dash.resonate.coop
+API_DOMAIN=api.justifay.com
+API_HOST=https://api.justifay.com
+APP_HOST=stream.justifay.com
 APP_TITLE=Justifay ID
+STATIC_HOSTNAME=dash.justifay.com
